--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Navigation -->
   <nav class="nav">
 <a class="active" href="https://claycare.vercel.app/">About</a>
-    <a href="https://claycare.vercel.app/product.html">Products</a>
+    <a href="https://claycare.vercel.app/products.html">Products</a>
     <a href="https://claycare.vercel.app/support.html">Support</a>
   </nav>
 
@@ -156,3 +156,4 @@
 
 </body>
 </html>
+
