--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
 
   <nav class="nav">
     <a href="index.html">About</a>
-    <a href="product.html">Products</a>
+    <a href="products.html">Products</a>
     <a href="support.html">Support</a>
   </nav>
 
@@ -96,3 +96,4 @@
 
 </body>
 </html>
+
