--- a/products.html
+++ b/products.html
@@ -17,7 +17,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <a href="https://claycare.vercel.app/">About</a>
-    <a class="active" href="https://claycare.vercel.app/product.html">Products</a>
+    <a class="active" href="https://claycare.vercel.app/products.html">Products</a>
     <a href="https://claycare.vercel.app/support.html">Support</a>
   </nav>
 
@@ -107,3 +107,4 @@
 
 </body>
 </html>
+
