--- a/support.html
+++ b/support.html
@@ -17,7 +17,7 @@
   <!-- Navigation -->
   <nav class="nav">
     <a href="https://claycare.vercel.app/">About</a>
-    <a href="https://claycare.vercel.app/product.html">Products</a>
+    <a href="https://claycare.vercel.app/products.html">Products</a>
     <a class="active" href="https://claycare.vercel.app/support.html">Support</a>
   </nav>
 
@@ -126,4 +126,5 @@
 <script type="module" src="auth-guard.js"></script>
 
 </body>
+
 </html>
